# authentication-service

./: Cargo.toml  README.md  build.rs
proto/: verify.proto
src/: main.rs
src/models/: db.rs  forgot.rs  mod.rs  otps.rs  users.rs
src/shared_state/: mod.rs
src/utils/: enums.rs  jwt.rs  mod.rs  responses.rs
src/views/: login.rs  logout.rs  mod.rs  refresh.rs  verify_token.rs  verify_user.rs
