[package]
name = "authentication-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
actix-web = "4"
mongodb = "2.5.0"
serde = "1.0.163"
jwt-simple = "0.11.4"
rand = "0.8.5"
regex = "1.8.1"
reqwest = "0.11.17"
tokio = { version = "1", features = ["full"] }
tonic = "0.9.2"
dotenv = "0.15.0"
chrono = "0.4.24"
bcrypt = "0.14.0"
prost = "0.11.9"

[dependencies.uuid]
version = "1.3.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics",
]

[build-dependencies]
tonic-build = "0.9.2"
